force-app/main/default/objects/HCP_Stipend__c/HCP_Stipend__c.object-meta.xml
<CustomObject>
    <label>HCP Stipend</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>HCP Stipend Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCP Stipends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>