force-app/main/default/objects/HCP_Stipend__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <formula>Mother__r.Birth_Date_from_Courier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>