force-app/main/default/objects/HCP_Stipend__c/fields/CB_2_0__c.field-meta.xml
<CustomField>
    <fullName>CB_2_0__c</fullName>
    <formula>Mother__r.Cord_Blood_2_0_Stored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CB 2.0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>