force-app/main/default/objects/HCP_Stipend__c/fields/CB_2_0_Amount__c.field-meta.xml
<CustomField>
    <fullName>CB_2_0_Amount__c</fullName>
    <formula>CB_2_0__c *  CB_2_0_Stipend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CB 2.0 $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>