force-app/main/default/objects/HCP_Stipend__c/fields/CB_2_0_Stipend__c.field-meta.xml
<CustomField>
    <fullName>CB_2_0_Stipend__c</fullName>
    <label>CB 2.0 Stipend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>