force-app/main/default/objects/HCP_Stipend__c/fields/CT__c.field-meta.xml
<CustomField>
    <fullName>CT__c</fullName>
    <formula>Mother__r.Cord_Tissue_Stored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>