force-app/main/default/objects/HCP_Stipend__c/fields/CT_Amount__c.field-meta.xml
<CustomField>
    <fullName>CT_Amount__c</fullName>
    <formula>CT__c *  CT_Stipend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CT $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>