force-app/main/default/objects/HCP_Stipend__c/fields/CT_Stipend__c.field-meta.xml
<CustomField>
    <fullName>CT_Stipend__c</fullName>
    <label>CT Stipend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>