force-app/main/default/objects/HCP_Stipend__c/fields/Doctor_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Reimbursement__c</fullName>
    <formula>Mother__r.Cord_Blood_Order__r.Doctor_Reimbursement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient was billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>