force-app/main/default/objects/HCP_Stipend__c/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Doctor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HCP Stipends</relationshipLabel>
    <relationshipName>HCP_Stipends</relationshipName>
    <type>Lookup</type>
</CustomField>