force-app/main/default/objects/HCP_Stipend__c/fields/HCP_Invoice__c.field-meta.xml
<CustomField>
    <fullName>HCP_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP Invoice</label>
    <referenceTo>HCP_Invoices__c</referenceTo>
    <relationshipLabel>HCP Stipends</relationshipLabel>
    <relationshipName>HCP_Stipends</relationshipName>
    <type>Lookup</type>
</CustomField>