force-app/main/default/objects/HCP_Stipend__c/fields/Lifetime_Storage__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Storage__c</fullName>
    <label>Lifetime Storage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>