force-app/main/default/objects/HCP_Stipend__c/fields/Mother__c.field-meta.xml
<CustomField>
    <fullName>Mother__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Birth Mother</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The doctor on the lab must match the doctor on the stipend.</errorMessage>
        <filterItems>
            <field>Lab__c.Medical_Professional__c</field>
            <operation>equals</operation>
            <valueField>$Source.HCP__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>HCP Stipends</relationshipLabel>
    <relationshipName>HCP_Stipends</relationshipName>
    <type>Lookup</type>
</CustomField>