force-app/main/default/objects/HCP_Stipend__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>HCP Stipends</relationshipLabel>
    <relationshipName>HCP_Stipends</relationshipName>
    <type>Lookup</type>
</CustomField>