force-app/main/default/objects/HCP_Stipend__c/fields/Order_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Invoice_Date__c</fullName>
    <description>Used for HCP Invoice</description>
    <formula>Order__r.fw1__Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Invoice Date</label>
    <type>Date</type>
</CustomField>