force-app/main/default/objects/HCP_Stipend__c/fields/Order_is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Order_is_Canceled__c</fullName>
    <formula>Mother__r.Is_Voided_LU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order is Canceled</label>
    <type>Checkbox</type>
</CustomField>