force-app/main/default/objects/HCP_Stipend__c/fields/PT_2_0__c.field-meta.xml
<CustomField>
    <fullName>PT_2_0__c</fullName>
    <formula>Mother__r.Placenta_2_0_Amnion_Stored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT 2.0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>