force-app/main/default/objects/HCP_Stipend__c/fields/PT_2_0_Amount__c.field-meta.xml
<CustomField>
    <fullName>PT_2_0_Amount__c</fullName>
    <formula>(PT__c + PT_2_0__c) *  PT_2_0_Stipend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT 2.0 $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>