force-app/main/default/objects/HCP_Stipend__c/fields/PT__c.field-meta.xml
<CustomField>
    <fullName>PT__c</fullName>
    <formula>Mother__r.Placenta_Tissue_Stored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>