force-app/main/default/objects/HCP_Stipend__c/fields/Reject__c.field-meta.xml
<CustomField>
    <fullName>Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reject</label>
    <type>Checkbox</type>
</CustomField>