force-app/main/default/objects/HCP_Stipend__c/fields/Surrogate__c.field-meta.xml
<CustomField>
    <fullName>Surrogate__c</fullName>
    <formula>Mother__r.Surrogate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surrogate</label>
    <type>Checkbox</type>
</CustomField>