force-app/main/default/objects/HCP_Stipend__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>CB_2_0_Amount__c +  CT_Amount__c +  PT_2_0_Amount__c +  Lifetime_Storage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>